--- a/exercises/responsive-design-techniques/css/styles.css
+++ b/exercises/responsive-design-techniques/css/styles.css
@@ -1,12 +1,56 @@
 body {
     max-width: 800px;
     width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+    align-content: center;
 }
-html {}
-    @media (min-width: 640px) {
-        html { font-size: 16pt; }
-        .two-columns-example {
-            display: flex;
-            width: 50%;
-        }
+@media screen and (min-width: 640px) {
+    body {
+        background-color: #eaf6ff;
+    }
+}
+@media screen and (min-width: 640px) {
+    h1 {
+        font-size: 2.5rem;
+    }
+}
+@media screen and (max-width: 500px) {
+    h1 {
+        font-size: 1.5rem;
+    }
+}
+#fixed-size-grid-items ul {
+    padding-left: 0;
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    }
+aside {
+    width: 170px;
+    margin: 10px;
+    font-size: .8rem;
+}
+#stretchable-grid-items ul {
+    padding-left: 0;
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -10px;
+    margin-right: -10px;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+  }
+  #stretchable-grid-items li {
+    width: 100%;
+  }
+  @media screen and (min-width:480px){
+    #stretchable-grid-items li{
+      width: 50%;
+    }
+  }
+  @media screen and (min-width:640px){
+    #stretchable-grid-items li{
+    width:25%;
+    }
 }
