--- a/exercises/responsive-design-techniques/css/styles.css
+++ b/exercises/responsive-design-techniques/css/styles.css
@@ -5,21 +5,18 @@ body {
     margin-right: auto;
     align-content: center;
 }
-@media screen and (min-width: 640px) {
-    body {
-        background-color: #eaf6ff;
+@media screen and (min-width:480px){
+    #stretchable-grid-items {
+    width: 50%;
     }
-}
-@media screen and (min-width: 640px) {
-    h1 {
-        font-size: 2.5rem;
+  }
+
+@media screen and (max-width:480px){
+    #stretchable-grid-items {
+    width: 100%;
     }
-}
-@media screen and (max-width: 500px) {
-    h1 {
-        font-size: 1.5rem;
-    }
-}
+  }
+
 #fixed-size-grid-items ul {
     padding-left: 0;
     list-style: none;
@@ -44,13 +41,3 @@ aside {
   #stretchable-grid-items li {
     width: 100%;
   }
-  @media screen and (min-width:480px){
-    #stretchable-grid-items li{
-      width: 50%;
-    }
-  }
-  @media screen and (min-width:640px){
-    #stretchable-grid-items li{
-    width:25%;
-    }
-}
